--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,7 @@
 ACLOCAL_AMFLAGS = -I m4
 
+AM_CPPFLAGS = -fno-strict-aliasing -fno-exceptions -fno-rtti
+
 EXTRA_DIST = \
 	CHANGELOG \
 	CONTRIBUTORS \
