Oops, burp-client.conf should be burp.conf

--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,9 @@
 /autoconf/test-driver
 /autom4te.cache
 /burp
-/burp-client.conf
+/burp.conf
 /burp-server.conf
+/CA.cnf
 /configure
 /runner
 /runner.log
