--- a/configure.ac
+++ b/configure.ac
@@ -29,6 +29,7 @@ dnl -------------------------------------------------------
 dnl Check for programs.
 dnl ------------------------------------------------------
 AC_PROG_INSTALL
+AC_PROG_MKDIR_P
 
 dnl --------------------------------------------------
 dnl Libtool config
