Replace non-portable pattern rules in Makefiles
Pattern rules are GNU Make specific. Just use
regular target rules instead.

This means slightly more duplications, but we
only have 3 config files so it's not the end of world.

Slight advantage is that we can move the templates
back to their respective directory where they used to be.

--- a/Makefile.am
+++ b/Makefile.am
@@ -367,9 +367,19 @@ clean-local-check:
 	$(AM_V_at)-rm -rf utest_restore
 	$(AM_V_at)-rm -rf utest_xattr
 
-$(configs): %: $(srcdir)/configs/%.in Makefile
+$(configs): Makefile
+
+burp.conf: $(srcdir)/configs/client/burp.conf.in
 	$(AM_V_at)rm -f $@
-	$(AM_V_GEN)$(do_subst) <$< >$@
+	$(AM_V_GEN)$(do_subst) <$(srcdir)/configs/client/burp.conf.in >$@
+
+burp-server.conf: $(srcdir)/configs/server/burp.conf.in
+	$(AM_V_at)rm -f $@
+	$(AM_V_GEN)$(do_subst) <$(srcdir)/configs/server/burp.conf.in >$@
+
+CA.cnf: $(srcdir)/configs/certs/CA/CA.cnf.in
+	$(AM_V_at)rm -f $@
+	$(AM_V_GEN)$(do_subst) <$(srcdir)/configs/certs/CA/CA.cnf.in >$@
 
 do_subst = ( sed \
   -e 's,[@]runstatedir[@],$(runstatedir),g' \
