--- a/Makefile.am
+++ b/Makefile.am
@@ -359,6 +359,7 @@ endif
 install-data-local:
 	$(AM_V_at)$(MKDIR_P) $(DESTDIR)$(localstatedir)/spool/burp
 	$(AM_V_at)$(MKDIR_P) $(DESTDIR)$(runstatedir)
+	$(AM_V_at)$(MKDIR_P) $(DESTDIR)$(sysconfdir)/CA
 	$(AM_V_at)$(MKDIR_P) $(DESTDIR)$(sysconfdir)/CA-client
 	$(AM_V_at)$(MKDIR_P) $(DESTDIR)$(sysconfdir)/autoupgrade/server/win32
 	$(AM_V_at)$(MKDIR_P) $(DESTDIR)$(sysconfdir)/autoupgrade/server/win64/$(VERSION)
