Fix a warning with older automake versions
Makefile.am:118: compiling `src/alloc.c' in subdir requires
`AM_PROG_CC_C_O' in `configure.ac'

--- a/configure.ac
+++ b/configure.ac
@@ -24,6 +24,7 @@ dnl Check for compiler.
 dnl ------------------------------------------------------
 
 AC_PROG_CXX
+AM_PROG_CC_C_O
 
 dnl -------------------------------------------------------
 dnl Check for programs.
