Unit tests for check_passwd.
Change-Id: Ic00563818230253e40f34d39b11c606a5ce4bc88

--- a/Makefile.am
+++ b/Makefile.am
@@ -322,6 +322,7 @@ runner_SOURCES = \
 	utest/server/protocol2/test_backup_phase2.c \
 	utest/server/protocol2/test_backup_phase4.c \
 	utest/server/protocol2/test_dpth.c \
+	utest/server/test_auth.c \
 	utest/server/test_bu_get.c \
 	utest/server/test_delete.c \
 	utest/server/test_list.c \
