Work on supporting xattrs and acls in protocol2.
Change-Id: I0aeffcba8ed33effd9fb66eb4827c275091b166e

--- a/Makefile.am
+++ b/Makefile.am
@@ -323,6 +323,7 @@ runner_SOURCES = \
 	utest/server/protocol2/test_backup_phase4.c \
 	utest/server/protocol2/test_dpth.c \
 	utest/server/test_auth.c \
+	utest/server/test_backup_phase3.c \
 	utest/server/test_bu_get.c \
 	utest/server/test_delete.c \
 	utest/server/test_list.c \
