Test coverage for rabin_read.c.
Change-Id: I38a216fff3fdcb1c99182b4d943e3e0643285b7a

--- a/Makefile.am
+++ b/Makefile.am
@@ -302,6 +302,7 @@ runner_SOURCES = \
 	utest/client/monitor/test_lline.c \
 	utest/client/protocol1/test_backup_phase2.c \
 	utest/client/protocol2/test_backup_phase2.c \
+	utest/client/protocol2/test_rabin_read.c \
 	utest/client/test_auth.c \
 	utest/client/test_find.c \
 	utest/client/test_restore.c \
