Add manpage for bsigs.
Change-Id: Ibaa7a601cc4a1f7decfbc4b8694fb55af95f20ea

--- a/Makefile.am
+++ b/Makefile.am
@@ -47,6 +47,7 @@ dist_doc_DATA = \
 
 dist_man8_MANS = \
 	manpages/bedup.8 \
+	manpages/bsigs.8 \
 	manpages/burp.8 \
 	manpages/burp_ca.8 \
 	manpages/vss_strip.8
