--- a/configs/client/burp.conf.in
+++ b/configs/client/burp.conf.in
@@ -32,8 +32,8 @@ progress_counter = 1
 # initiate a restore.
 server_can_restore = 0
 
-# Set server_can_override_includes to 0 if you do not want the server to be able
-# to override the local include/exclude list. Defaults is 1.
+# Set server_can_override_includes to 0 if you do not want the server to be
+# able to override the local include/exclude list. The default is 1.
 # server_can_override_includes = 1
 
 # Set an encryption password if you do not trust the server with your data.
