Another attempt to get Travis to tell me something sensible.
Change-Id: I32d5c689ebe0abd81d675b8451f599831381f87d

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,4 +37,6 @@ script:
   - test "$TRAVIS_OS_NAME" = "linux" && make -j3 distcheck  || make -j3 distcheck DISTCHECK_CONFIGURE_FLAGS="--with-openssl=/usr/local/opt/openssl"
 
 after_failure:
-  - cat test-suite.log
+  - ls -l
+  - ls -l *
+  - cat burp*/test-suite.log
