Another attempt to get Travis to tell me something sensible.
Change-Id: I1028014a0d66c04ddea8b3b781f8a575d9027e98

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,5 @@ script:
   - test "$TRAVIS_OS_NAME" = "linux" && make -j3 distcheck  || make -j3 distcheck DISTCHECK_CONFIGURE_FLAGS="--with-openssl=/usr/local/opt/openssl"
 
 after_failure:
-  - ls -l
-  - ls -l *
+  - find . -name '*.log'
   - cat burp*/test-suite.log
