Another attempt to get Travis to tell me something sensible.
Change-Id: I2230debb13b92cf79b700b20b6f0f76324e03d0b

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,5 +37,4 @@ script:
   - test "$TRAVIS_OS_NAME" = "linux" && make -j3 distcheck  || make -j3 distcheck DISTCHECK_CONFIGURE_FLAGS="--with-openssl=/usr/local/opt/openssl"
 
 after_failure:
-  - find . -name '*.log'
-  - cat burp*/test-suite.log
+  - cat burp-*/_build/sub/test-suite.log
