Another attempt to get Travis to succeed.
Change-Id: I27597db4d9c0e3e6c94e6ea3598ca431dc5bbf54

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,5 +39,8 @@ script:
 after_failure:
   - cat burp-*/_build/sub/test-suite.log
 
-after_success:
-  - echo "success"
+deploy:
+  provider: script
+  script: test/travis-deploy.sh
+  on:
+    branch: master
