Feature glob after script pre (#416)
* add: glob_after_script_pre option to evaluate glob after script pre execution

* refresh incexc list when re-evaluating glob

* improve manpage

* remove option to avoid confusion

* avoid duplicate in includes list while re-evaluating glob

* add: include_glob documentation

* fix: memory leak when duplicate in includes list

* add: include_glob tests

--- a/configs/client/burp.conf.in
+++ b/configs/client/burp.conf.in
@@ -86,7 +86,7 @@ ssl_peer_cn = burpserver
 
 # The following options specify exactly what to backup.
 # The server will override them if there is at least one 'include=' line on
-# the server side.
+# the server side and 'server_can_override_includes=1'.
 include = /home
 #exclude = /home/graham/testdir/librsync-0.9.7/testsuite
 #include = /home/graham/testdir/librsync-0.9.7/testsuite/deep
