Try to get useful error message from Travis.
Change-Id: If6566114c2d890ad4b2481a29c94ab2f46bbeef0

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ script:
   - test "$TRAVIS_OS_NAME" = "linux" && make -j3 distcheck  || make -j3 distcheck DISTCHECK_CONFIGURE_FLAGS="--with-openssl=/usr/local/opt/openssl"
 
 after_failure:
-  - cat burp-*/_build/sub/test-suite.log
+  - tail burp-*/_build/sub/test-suite.log
 
 deploy:
   provider: script
