Fix bug in server side restore regex parsing introduced in 2.0.36.
Change-Id: Id993ea4fc07b76ba4b2e42eeafbb6707ce4e16ae

--- a/Makefile.am
+++ b/Makefile.am
@@ -338,6 +338,7 @@ runner_SOURCES = \
 	utest/server/test_manio.c \
 	utest/server/test_resume.c \
 	utest/server/test_restore.c \
+	utest/server/test_run_action.c \
 	utest/server/test_sdirs.c
 
 runner_SOURCES+= $(burp_SOURCES)
